# meta

./: BUILD.bazel  WORKSPACE  go.mod  main.go
conv/bits/: BUILD.bazel  bits.go
conv/raw/: BUILD.bazel  raw.go
crypto/hash/: BUILD.bazel  hash.go  hash_mockdata.go  md5.go  md5_test.go  sha1.go  sha1_test.go  sha256.go  sha256_test.go  sha512.go  sha512_test.go
fs/file/: BUILD.bazel  file.go
strings/: go.mod  main.go
strings/charmatcher/: BUILD.bazel  charmatcher.go  charmatcher_test.go
strings/strbuilder/: BUILD.bazel  strbuilder.go  strbuilder_test.go
