load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/ZalgoNoise/meta
gazelle(name = "gazelle")

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "meta_lib",
    srcs = ["main.go"],
    importpath = "github.com/ZalgoNoise/meta",
    visibility = ["//visibility:private"],
    deps = ["//strings/charmatcher"],
)

go_binary(
    name = "meta",
    embed = [":meta_lib"],
    visibility = ["//visibility:public"],
)
