load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

gazelle(
    name = "gazelle",
    prefix = "github.com/ZalgoNoise/meta",
)

buildifier(
    name = "buildifier-check",
    lint_mode = "warn",
    mode = "check",
    multi_diff = True,
)

buildifier(
    name = "buildifier-fix",
    lint_mode = "fix",
    mode = "fix",
    multi_diff = True,
)

go_library(
    name = "meta_lib",
    srcs = ["main.go"],
    importpath = "github.com/ZalgoNoise/meta",
    visibility = ["//visibility:public"],
    deps = ["//crypto/hash"],
)

go_binary(
    name = "meta",
    embed = [":meta_lib"],
    visibility = ["//visibility:public"],
)
