load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "strbuilder",
    srcs = ["strbuilder.go"],
    importpath = "github.com/ZalgoNoise/meta/strings/strbuilder",
    visibility = ["//visibility:public"],
    deps = ["//strings/charmatcher"],
)

go_test(
    name = "strbuilder_test",
    srcs = ["strbuilder_test.go"],
    embed = [":strbuilder"],
)
